--- a/services/client/src/styles/components/_gene-table.scss
+++ b/services/client/src/styles/components/_gene-table.scss
@@ -1,22 +1,23 @@
 .gene-table {
-    // background: darken($turquoise, 10%);
+  flex: 1 0 auto;
+  background: -webkit-gradient(linear, left top, right bottom, from($light-green), to($dark-blue));
 }
 
 .gene-table__header {
-    background: $dark-blue; // width: 30rem !important;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-transform: capitalize;
+  background: $light-green;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-transform: capitalize;
 }
 
 .gene-table__column {
-    white-space: pre-line !important;
-    word-wrap: break-word;
-    font-size: $s-size;
+  font-size: $m-size;
+  font-family: monospace;
+  white-space: pre-line !important;
+  word-wrap: break-word;
+  border: 1px solid lighten($off-white, 21%) !important;
+  padding: 7px !important;
 }
 
-.gene-table__list-column {
-    white-space: pre-line !important;
-    word-wrap: break-word;
-    word-spacing: 255px;
-    font-size: $s-size;
+.-btn {
+  background: $off-white !important;
 }
